Added tailwind and speech

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,24 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+:root {
+  --background: #f2f2f2;
+  --foreground: #0a0a0a;
+}
+
+body {
+  color: var(--foreground);
+  background: var(--background);
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+@layer utilities {
+  .text-balance {
+    text-wrap: balance;
+  }
+}
+
 .interviewResult {
 	overflow-y: auto;
 	max-height: 75vh;
@@ -10,7 +31,6 @@
 .message {
 	margin: 10px 0;
 	padding: 5px 10px;
-	max-width: 70%;
 }
 
 .user {
@@ -20,7 +40,7 @@
 }
 
 .model {
-	background-color: #333;
+	background-color: #ccc;
 	float: left;
 	border-radius: 10px 10px 10px 0;
 }
@@ -42,20 +62,12 @@
 	overflow: hidden;
 }
 
-body {
-	background: black !important;
-	color: white !important;
-}
-
-.response-input {
-	background-color: black !important;
-	color: white !important;
-}
-
-.response-input::placeholder {
-	color: #999 !important;
-}
-
 .message p {
 	margin-bottom: 5px;
+}
+
+.waveform {
+    width: 100%;
+    height: 80px;
+    margin-top: 20px;
 }
